# tupoll-overlay

./: Cargo.toml  LICENSE  README.md  tupoll-overlay-9999.ebuild
app-portage/tupoll-overlay/files/tupoll-overlay/: Cargo.toml
app-portage/tupoll-overlay/files/tupoll-overlay/src/: main.rs
files/tupoll-overlay/: Cargo.toml  Pinnacle Translator.desktop
files/tupoll-overlay/src/: main.rs  pinnacle-install.rs  pinnacle-translator.rs  translator-config.rs
files/tupoll-overlay/src/pinnacle-translator/src/: main.rs
src/: eapi_wayland2.rs  eapi_wayland3.rs  emerge-rs.rs  emerge-rs_1.rs  eselect_repos.rs  layout_conf.rs  main.rs  make_defaults_tg.rs  new_ebuid_overlay.rs  overlay_new.rs  parent_wayland1.rs  parent_wayland2.rs  pinacle_ebuild.rs  portage_repo_conf.rs  profiles_desc.rs  repo_name.rs  repoman1.rs  repoman2.rs  soxbar_ebuild.rs  target_wayland_eapi.rs  tupoll-overlay.rs  use.mask.rs  use_force.rs
