[package]
name = "tupoll-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "setup1"
path = "src/tupoll-overlay.rs"

[[bin]]
name = "setup2"
path = "src/eapi_wayland1.rs"

[[bin]]
name = "setup3"
path = "src/eapi_wayland2.rs"

[[bin]]
name = "setup4"
path = "src/eapi_wayland3.rs"

[[bin]]
name = "setup5"
path = "src/layout_conf.rs"

[[bin]]
name = "setup6"
path = "src/make_defaults_tg.rs"

[[bin]]
name = "setup7"
path = "src/parent_wayland1.rs"

[[bin]]
name = "setup8"
path = "src/parent_wayland2.rs"

[[bin]]
name = "setup9"
path = "src/pinacle_ebuild.rs"

[[bin]]
name = "setup10"
path = "src/profiles_desc.rs"

[[bin]]
name = "setup11"
path = "src/repoman1.rs"

[[bin]]
name = "setup12"
path = "src/repoman2.rs"

[[bin]]
name = "setup13"
path = "src/repo_name.rs"

[[bin]]
name = "setup14"
path = "src/soxbar_ebuild.rs"

[[bin]]
name = "setup15"
path = "src/target_wayland_eapi.rs"

[[bin]]
name = "setup16"
path = "src/use_force.rs"

[[bin]]
name = "setup17"
path = "src/use_mask.rs"

[[bin]]
name = "setup18"
path = "src/eselect_repos.rs"

[[bin]]
name = "setup19"
path = "src/portage_repo_conf.rs"

[[bin]]
name = "setup20"
path = "src/new_ebuid_overlay.rs"

[[bin]]
name = "setup21"
path = "src/overlay_new.rs"

[profile.release]
strip = true      
lto = true        
opt-level = "z"   
