[package]
name = "tupoll-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10"
glib = "0.21"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[[bin]]
name = "pinnacle-install"
path = "src/pinnacle-install.rs"

[[bin]]
name = "pinnacle-translator"
path = "src/pinnacle-translator.rs"


[profile.release]
strip = true      
lto = true        
opt-level = "z"   
