[package]
name = "tupoll-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "pinnacle-install"
path = "src/pinnacle-install.rs"

[[bin]]
name = "translator-config"
path = "src/translator-config.rs"


[profile.release]
strip = true      
lto = true        
opt-level = "z"   
